unpackaged/main/default/objects/ET_Private_School_Student__c/ET_Private_School_Student__c.object-meta.xml
<CustomObject>
    <label>Private School Student</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Private School Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Private School Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>