unpackaged/main/default/objects/ET_Private_School_Student__c/fields/ET_Child_Count__c.field-meta.xml
<CustomField>
    <fullName>ET_Child_Count__c</fullName>
    <label>Child Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>