unpackaged/main/default/objects/ET_Private_School_Student__c/fields/ET_Emirates__c.field-meta.xml
<CustomField>
    <fullName>ET_Emirates__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Emirates</label>
    <length>100</length>
    <type>Text</type>
</CustomField>