unpackaged/main/default/objects/ET_Private_School_Student__c/fields/ET_Longitude__c.field-meta.xml
<CustomField>
    <fullName>ET_Longitude__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Longitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>