unpackaged/main/default/objects/ET_Private_School_Student__c/fields/ET_Parent_EID__c.field-meta.xml
<CustomField>
    <fullName>ET_Parent_EID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Parent EID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>