unpackaged/main/default/objects/ET_Private_School_Student__c/fields/ET_School_Name__c.field-meta.xml
<CustomField>
    <fullName>ET_School_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>School Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>