unpackaged/main/default/objects/ET_Private_School_Student__c/fields/ET_Secondary_contact_number__c.field-meta.xml
<CustomField>
    <fullName>ET_Secondary_contact_number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary contact number</label>
    <type>Phone</type>
</CustomField>