unpackaged/main/default/objects/ET_Private_School_Student__c/fields/ET_StudentKey__c.field-meta.xml
<CustomField>
    <fullName>ET_StudentKey__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Student Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>